# mechanical_engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  me.code-workspace
examples/: CMakeLists.txt
examples/entity_test/: CMakeLists.txt  main.cpp
examples/entity_test/include/: game.hpp
examples/entity_test/src/: game.cpp  main.cpp
examples/raycasting/: CMakeLists.txt
examples/raycasting/include/: game.hpp  raycasting.hpp
examples/raycasting/src/: game.cpp  main.cpp  raycasting.cpp
examples/simplesSDL3/: CMakeLists.txt
examples/template_gl/: CMakeLists.txt
examples/template_gl/include/: game.hpp
examples/template_gl/shades/: vertex_shader.glsl
examples/template_gl/src/: game.cpp  main.cpp
mechanical/core/: camera.hpp  canvas_fb.hpp  engine.hpp  entity.hpp  events.hpp  global.hpp  interfaces.hpp  joystick.hpp  keyboard.hpp  material.hpp  mesh.hpp  mouse.hpp  pad.hpp  registry.hpp  service_locator.hpp  state_stack.hpp  tex.hpp  timer.hpp  types_base.hpp  uniform_value.hpp  view_projection.hpp
mechanical/ecs/: camera_component.hpp  ecs.hpp  entity.hpp  fbspec_componente.hpp  light_component.hpp  material_component.hpp  mesh_component.hpp  registry.hpp  shader_component.hpp  texture_component.hpp  transformation_component.hpp
mechanical/entity/: camera.hpp  light.hpp  material.hpp  mesh.hpp  registry.hpp
mechanical/gl/: OpenGLDefs.hpp  canvas_gl.hpp  file_utils.hpp  shader.hpp  shader_manager.hpp  tex.hpp  texture.hpp  texture_manager.hpp
mechanical/gl/buffer/: buffer_layout.hpp  frame_buffer.hpp  index_buffer.hpp  render_buffer.hpp  vertex_array.hpp  vertex_buffer.hpp
mechanical/persistence/: persistence.hpp
mechanical/space_3d/: aabb.hpp  bsp_node.hpp  frustum.hpp  heap_q.hpp  mesh.hpp  octree.hpp  plane.hpp  space.hpp  transformation.hpp  transformation_stack.hpp  triangle.hpp  view_projection.hpp
mechanical/src/gl/: CMakeLists.txt  canvas_gl.cpp  file_utils.cpp  shader.cpp  shader_manager.cpp  texture.cpp
mechanical/src/gl/buffer/: frame_buffer.cpp  index_buffer.cpp  render_buffer.cpp  vertex_array.cpp
mechanical/src/persistence/: CMakeLists.txt  persistence.cpp
src/: CMakeLists.txt  main.cpp
